# fraser-cmake-rust-c

./: .clang-format  CMakeLists.txt  Cargo.toml  build.sh  readme.md
src/: main.c
